--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,27 +5,20 @@ project(pcl_learning)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(Torch_DIR "/opt/libtorch/share/cmake/Torch") 
-set(CMAKE_CUDA_COMPILER "/usr/local/cuda-11.2/bin/nvcc")
+set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 option(USE_CUDA "Use CUDA" ON)
 set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -gencode arch=compute_60,code=sm_60)
 set(CUDA_TOOLKIT_ROOT_DIR "/usr/local/cuda")
 
-find_package(PCL 1.9 REQUIRED)
+find_package(PCL REQUIRED)
 find_package(Torch REQUIRED)
-find_package(CUDA 11.2 REQUIRED)
-find_package(OpenMP 4.5)
-if (OPENMP_FOUND)
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-endif()
+find_package(CUDA REQUIRED)
 
 include_directories(
     include
     ${PCL_INCLUDE_DIRS}
     ${Torch_INCLUDE_DIRS}
-    ${CUDA_INCLUDE_DIRS}
-    ${OpenMP_INCLUDE_DIRS})
+    ${CUDA_INCLUDE_DIRS})
 
 add_executable(test_pcl src/test_pcl.cpp)
 target_link_libraries(test_pcl ${PCL_LIBRARIES})
