--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_executable(test_pointnet2_utils src/test_pointnet2_utils.cpp
                                     src/pointnet2_utils.cpp)
 target_link_libraries(test_pointnet2_utils ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
 
-add_executable(test_pointnet2_sa include/pointnet2_pytorch/pointnet2_core.cpp
+add_executable(test_pointnet2_sa src/pointnet2_core.cpp
                                  src/pointnet2_utils.cpp)
 target_link_libraries(test_pointnet2_sa ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
 
