--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,10 @@ add_executable(test_pointnet2_utils src/test_pointnet2_utils.cpp
                                     src/pointnet2_utils.cpp)
 target_link_libraries(test_pointnet2_utils ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
 
-add_executable(test_pointnet2_sa src/pointnet2_core.cpp
+add_executable(test_pointnet2_sa src/test_pointnet2_core.cpp
+                                 src/pointnet2_core.cpp
                                  src/pointnet2_utils.cpp)
 target_link_libraries(test_pointnet2_sa ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
-
-
 
 install(TARGETS test_pointnet2_utils test_pointnet2_sa
         ARCHIVE DESTINATION lib
