--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,24 +24,27 @@ add_executable(test_pointnet2_utils src/test_pointnet2_utils.cpp
                                     src/pointnet2_utils.cpp)
 target_link_libraries(test_pointnet2_utils ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
 
-add_executable(test_pointnet2_core_modules src/test_pointnet2_core.cpp
-                                 src/pointnet2_core.cpp
-                                 src/pointnet2_utils.cpp)
-target_link_libraries(test_pointnet2_core_modules ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
+#
+#add_executable(test_pointnet2_core_modules src/test_pointnet2_core.cpp
+#                                 src/pointnet2_core.cpp
+#                                 src/pointnet2_utils.cpp)
+#target_link_libraries(test_pointnet2_core_modules ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
 
-add_executable(train_pointnet2_sem_seg  src/train_pointnet2_sem_seg.cpp
-                                        src/pointnet2_sem_seg.cpp
-                                        src/pointnet2_core.cpp
-                                        src/pointnet2_utils.cpp
-                                        src/uneven_ground_dataset.cpp)
-target_link_libraries(train_pointnet2_sem_seg ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
+#
+#add_executable(train_pointnet2_sem_seg  src/train_pointnet2_sem_seg.cpp
+#                                        src/pointnet2_sem_seg.cpp
+ #                                       src/pointnet2_core.cpp
+ #                                       src/pointnet2_utils.cpp
+ #                                       src/uneven_ground_dataset.cpp)
+#target_link_libraries(train_pointnet2_sem_seg ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
+###
 
-install(TARGETS test_pointnet2_utils test_pointnet2_core_modules train_pointnet2_sem_seg
+install(TARGETS test_pointnet2_utils #test_pointnet2_core_modules train_pointnet2_sem_seg
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
         RUNTIME DESTINATION bin)
 
-install(TARGETS test_pointnet2_utils test_pointnet2_core_modules train_pointnet2_sem_seg
+install(TARGETS test_pointnet2_utils #test_pointnet2_core_modules train_pointnet2_sem_seg
         RUNTIME DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY include/
