--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.20)
 project(pointnet2_pytorch)
 
 # specify the C++ standard
@@ -13,6 +13,8 @@ set(CUDA_TOOLKIT_ROOT_DIR "/usr/local/cuda")
 find_package(PCL REQUIRED)
 find_package(Torch REQUIRED)
 find_package(CUDA REQUIRED)
+find_package(CUDNN REQUIRED)
+
 
 include_directories(
     include
@@ -36,7 +38,7 @@ add_executable(train_pointnet2_sem_seg  src/train_pointnet2_sem_seg.cpp
                                        src/pointnet2_core.cpp
                                        src/pointnet2_utils.cpp
                                        src/uneven_ground_dataset.cpp)
-target_link_libraries(train_pointnet2_sem_seg ${PCL_LIBRARIES} ${TORCH_LIBRARIES})
+target_link_libraries(train_pointnet2_sem_seg ${PCL_LIBRARIES} ${TORCH_LIBRARIES} stdc++fs)
 
 
 install(TARGETS test_pointnet2_utils test_pointnet2_core_modules train_pointnet2_sem_seg
