TEMP branch fo regressing costs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,15 @@
         "csignal": "cpp",
         "forward_list": "cpp",
         "cfenv": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "slist": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     },
     "ros.distro": "foxy"
 }
