add another cost critic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,5 +82,8 @@
         "queue": "cpp",
         "stack": "cpp"
     },
-    "ros.distro": "foxy"
+    "ros.distro": "foxy",
+    "python.analysis.extraPaths": [
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ]
 }
