USE METRIC SYTEM IN CLOUD

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,5 +85,6 @@
     "ros.distro": "foxy",
     "python.analysis.extraPaths": [
         "/opt/ros/foxy/lib/python3.8/site-packages"
-    ]
+    ],
+    "python.formatting.provider": "black"
 }
