--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CUDA_TOOLKIT_ROOT_DIR "/usr/local/cuda")
 find_package(PCL REQUIRED)
 find_package(Torch REQUIRED)
 find_package(CUDA REQUIRED)
-find_package(CUDNN REQUIRED)
+#find_package(CUDNN REQUIRED)
 
 list(APPEND CMAKE_MODULE_PATH "/usr/local/lib/cmake/OpenVDB")
 find_package(OpenVDB REQUIRED)
@@ -49,6 +49,13 @@ add_executable(train_pointnet2_sem_seg src/train_pointnet2_sem_seg.cpp
                                        src/uneven_ground_dataset.cpp)
 target_link_libraries(train_pointnet2_sem_seg ${PCL_LIBRARIES} ${TORCH_LIBRARIES} stdc++fs OpenMP::OpenMP_CXX)
 
+add_executable(train_pointnet2_sem_seg_poss src/train_pointnet2_sem_seg_poss.cpp
+                                       src/pointnet2_sem_seg.cpp
+                                       src/pointnet2_core.cpp
+                                       src/pointnet2_utils.cpp
+                                       src/poss_dataset.cpp)
+target_link_libraries(train_pointnet2_sem_seg_poss ${PCL_LIBRARIES} ${TORCH_LIBRARIES} stdc++fs OpenMP::OpenMP_CXX)
+
 add_executable(inference_pointnet2_sem_seg src/inference_pointnet2_sem_seg.cpp
                                        src/pointnet2_sem_seg.cpp
                                        src/pointnet2_core.cpp
@@ -62,6 +69,7 @@ target_link_libraries(test_openvdb OpenVDB::openvdb ${PCL_LIBRARIES})
 install(TARGETS test_pointnet2_utils 
                 test_pointnet2_core_modules 
                 train_pointnet2_sem_seg 
+                train_pointnet2_sem_seg_poss
                 inference_pointnet2_sem_seg
                 test_openvdb
         ARCHIVE DESTINATION lib
@@ -71,6 +79,7 @@ install(TARGETS test_pointnet2_utils
 install(TARGETS test_pointnet2_utils 
                 test_pointnet2_core_modules 
                 train_pointnet2_sem_seg 
+                train_pointnet2_sem_seg_poss
                 inference_pointnet2_sem_seg
                 test_openvdb
         RUNTIME DESTINATION lib/${PROJECT_NAME})
